--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -415,7 +415,7 @@ nav .button-collapse i {
   font-size: 22px;
   line-height: 40px;
   font-weight: bold;
-  opacity: 0.7;
+  /*opacity: 0.7;*/
   color: inherit;
   margin: 0px;
 }
@@ -1057,6 +1057,17 @@ textarea.materialize-textarea:focus:not([readonly]) {
   }
 }
 
-div#kit h5,ul {
-  /*text-align: left;*/
+table#personalEquipment tbody tr td {
+  border-top: none;
+  border-bottom: 1px solid;
+}
+
+table#personalEquipment tbody tr td img {
+  float: left;
+  padding-right: 15px;
+}
+
+table#personalEquipment tbody tr td p {
+  padding-top: 20px;
+  margin-bottom: 20px;
 }
